@@ -1,3 +1,11 @@
+2009-08-12  Sergio Villar Senin  <svillar@igalia.com>
+
+	* libtinymail/tny-fs-stream-cache.c (get_available_size)
+	(get_free_space, remove_old_files)
+	(tny_fs_stream_cache_get_stream, tny_fs_stream_cache_remove)
+	(fill_from_cache): protect the access to priv->cached_files to
+	make the TnyFsStream thread-safe
+
 2009-08-10  Sergio Villar Senin  <svillar@igalia.com>
 
 	* libtinymail-camel/camel-lite/camel/ (cmd_tocache): protect a
